Fixed a vertical align problem in "save & apply" button.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -81,6 +81,7 @@ body {
 
 .gpii-pmt-saveAndApplyButtonLabel {
 	cursor: inherit;
+	vertical-align: bottom;
 }
 
 .gpii-prefsEditor-save {
